fix(css): fix header alignment

--- a/portifolio.css
+++ b/portifolio.css
@@ -2,6 +2,12 @@ html {
   scroll-behavior: smooth;
 
 }
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
 
 
 body {
@@ -162,6 +168,7 @@ header.container {
     margin-top: 0px;
     margin-top: -80px;
     justify-content: center;
+
     
 }
 .intro-text {
